--- a/Lab09/Exercise3/customerFronted.html
+++ b/Lab09/Exercise3/customerFronted.html
@@ -21,13 +21,13 @@
                     Quantity: <input type="number" id="tomato" name="tomato" min="0"><br><br>
 
                 <b>Please sign-in to check out:</b><br>
-                    Email: <input type="text" name="username" id="username"><br>
+                    Email: <input type="text" name="email" id="email"><br>
                     Password: <input type="text" name="password" id="password"><br><br>
 
                 <b>Choose your shipping option:</b><br>
-                    <input type="radio" name="ship" id="free" value="Free 7 day">Free 7-day<br>
-                    <input type="radio" name="ship" id="d50" value="$50 Over Night">$50.00 Overnight<br>
-                    <input type="radio" name="ship" id="d5" value="$5 Three Day">$5.00 3-day<br><br>
+                    <input type="radio" name="ship" id="free" value="Free 7-day">Free 7-day<br>
+                    <input type="radio" name="ship" id="d50" value="$50 Overnight">$50.00 Overnight<br>
+                    <input type="radio" name="ship" id="d5" value="$5 3-day">$5.00 3-day<br><br>
                 <input type="submit" id="submit" value="Place Order">
                 <input type="reset">
             </form>
